[workspace]
resolver = "2"
members = [
  "sdk",
  "api",
  "cli", # "app",  # "integration-tests"
]

[workspace.package]
authors = ["Mahdi <Mahdi.robatipoor@gmail.com>"]
description = "transfer file"
documentation = ""
edition = "2021"
homepage = "https://github.com/robatipoor/pf"
keywords = ["paste", "file", "transfer"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/robatipoor/pf"
version = "0.1.0"

[profile.release]
lto = true
opt-level = "z"
strip = true

[workspace.dependencies]
anyhow = "1.0.79"
argon2 = "0.5.2"
assert_cmd = "2.0.13"
async-stream = { version = "0.3.5" }
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.2", features = ["async-read-body"] }
base64 = "0.21.7"
bincode = "1.3.3"
build_html = "2.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
cuid2 = "0.1.2"
fake = { version = "2.9.2", features = ['derive', 'uuid', 'chrono'] }
futures-util = "0.3.30"
wiremock = { version = "0.5.22" }
hyper = "1.1.0"
indicatif = "0.17.7"
log = "0.4.20"
log-derive = "0.4.1"
mime_guess = "2.0.4"
multer = "3.0.0"
once_cell = { version = "1.19.0" }
project-root = "0.2.2"
qrcodegen = "1.8.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  "multipart",
  "stream",
  "rustls-tls",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sled = "0.34.7"
strum = { version = "0.25.0", features = ["derive"] }
test-context = "0.1.4"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [
  "macros",
  "time",
  "process",
  "net",
  "rt-multi-thread",
] }
tokio-util = "0.7.10"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
garde = "0.17.0"
