[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/main.rs"

[dependencies]
sdk = { path = "../sdk" }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
cuid2 = { workspace = true }
fake = { workspace = true }
futures-util = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
qrcode = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
strum = { workspace = true }
test-context = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper-util = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
image = { workspace = true }
garde = { workspace = true }
