[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
fake = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
garde = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
