[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { workspace = true }
gloo = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
fake = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = { workspace = true }
async-stream = { workspace = true }
