[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../sdk" }
anyhow = { workspace = true }
assert_cmd = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
fake = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
project-root = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
cuid2 = { workspace = true }