[package]
name = "pf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
pf-sdk = { path = "../sdk" }
reqwest = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
assert_cmd = { workspace = true }
async-stream = { workspace = true }
clap = { workspace = true }
fake = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
cuid2 = { workspace = true }
indicatif = { workspace = true }
chacha20poly1305 = { workspace = true }
