[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sled = { workspace = true }
config = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
multer = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
garde = { workspace = true }
argon2 = { workspace = true }
qrcodegen = { workspace = true }
base64 = { workspace = true }
log-derive = { workspace = true }
log = { workspace = true }
