[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
fake = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
garde = { workspace = true }
base64 = { workspace = true }
log-derive = { workspace = true }
log = { workspace = true }
chacha20poly1305 = { workspace = true }
indicatif = { workspace = true }
async-stream = { workspace = true }
mime_guess = { workspace = true }
