[package]
name = "util"
version = "0.1.0"
edition.workspace = true

[dependencies]
sdk = { path = "../sdk" }
tokio = { workspace = true }
axum = { workspace = true }
sled = { workspace = true }
config = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
multer = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
argon2 = { workspace = true }
qrcodegen = { workspace = true }
base64 = { workspace = true }
log-derive = { workspace = true }
log = { workspace = true }
